; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rfmtdate.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rfmtdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i64 0, align 8
@ECPG_INFORMIX_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@ECPG_INFORMIX_DATE_CONVERT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rfmtdate(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 0, i64* @errno, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @PGTYPESdate_fmt_asc(i32 %8, i8* %9, i8* %10)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

14:                                               ; preds = %3
  %15 = load i64, i64* @errno, align 8
  %16 = load i64, i64* @ENOMEM, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @ECPG_INFORMIX_OUT_OF_MEMORY, align 4
  store i32 %19, i32* %4, align 4
  br label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @ECPG_INFORMIX_DATE_CONVERT, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %18, %13
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @PGTYPESdate_fmt_asc(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
